assets/css/style.css
body {
    background-color: #CEF7A0;
}
.navbar {
    background-color: rgba(31, 39, 27, .9);
    height:150px;
    
}
.navbar-brand {
    font-family: 'Bebas Neue', cursive;
    font-size:30px;
    }
.nav-link {
    font-family:'Roboto Slab', serif;
    color:#fff;
}

.container-footer {
    height:150px;
    background-color: rgba(31, 39, 27, .9);
    margin-top:100%;
}
.container-footer .col {
    text-align: center; 
    font-size:30px;   
}

.main-grid {
    width:100%;
    height:450px;
    padding-top:5px;
} 
.main-grid img {
     overflow:hidden;
     width:400px;
     height:300px;
     
 }
 .main-grid h3 {
    font-family:'Roboto Slab', serif;
    font-weight: bold;
    text-align:center;
 }
 .welcome {
     width:100%;
     height:300px;
     text-align:center;
     font-family:'Roboto Slab', serif;
     font-size:20px;
     padding: 0px 50px 0px 50px;
 }
 .welcome h3 {
     font-weight:bold;
 }

